crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__flake8_exemption_all.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        ParsedNoqa {
            warnings: [],
            directive: All(
                All {
                    range: 0..14,
                },
            ),
        },
    ),
)
