crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__flake8_exemption_all_case_insensitive.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(source)"
---
Ok(
    Some(
        All,
    ),
)
