crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__flake8_exemption_codes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(source)"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            [
                "F401",
                "F841",
            ],
        ),
    ),
)
