crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__flake8_malformed_code_2.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..22,
                    codes: [
                        Code {
                            code: "RUF001",
                            range: 16..22,
                        },
                    ],
                },
            ),
        },
    ),
)
