crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_all_multi_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: All(
                All {
                    range: 0..7,
                },
            ),
        },
    ),
)
