crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..12,
                codes: [
                    "F401",
                ],
                code_ranges_full: [
                    8..12,
                ],
            },
        ),
    ),
)
